--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+amqp==1.4.9
+anyjson==0.3.3
+billiard==3.3.0.23
+celery==3.1.25
 Django==1.11.13
 django-bootstrap3==10.0.1
+django-compat==1.0.15
 django-filter==1.1.0
 django-tables2==1.21.2
+kombu==3.0.37
 pytz==2018.4
-django-background-tasks
+redis==2.10.6
+six==1.11.0
+vine==1.1.4
